--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tutorial_wish_mysql_with_node",
+  "name": "bobv2",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
