--- a/server/package.json
+++ b/server/package.json
@@ -1,29 +1,26 @@
 {
-  "name": "bobv2",
+  "name": "server",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest --watch --verbose  ",
-    "start": "nodemon index.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.2.1",
     "bcrypt": "^5.1.0",
-    "cookie-parser": "^1.4.6",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
-    "express": "^5.0.0-beta.1",
-    "helmet": "^6.0.1",
-    "joi": "^17.7.0",
-    "joi-password-complexity": "^5.1.0",
-    "jsonwebtoken": "^8.5.1",
-    "mysql2": "^2.3.3"
-  },
-  "devDependencies": {
-    "jest": "^29.3.1",
-    "supertest": "^6.3.3"
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "gridfs-stream": "^1.1.1",
+    "helmet": "^7.0.0",
+    "jsonwebtoken": "^9.0.1",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.4",
+    "multer-gridfs-storage": "^5.0.2",
+    "mysql2": "^3.5.2"
   }
 }
